View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027961 | Open CASCADE | OCCT:Visualization | public | 2016-10-13 16:27 | 2016-12-09 16:38 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027961: Visualization - remove unused and no more working OpenGl_AVIWriter | ||||
Description | OpenGl_AVIWriter is outdated and should be removed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27961 has been created by kgv. SHA-1: 11f377905077c4568e6f0f2f7e8368d095c56684 Detailed log of new commits: Author: kgv Date: Thu Oct 13 16:28:34 2016 +0300 0027961: Visualization - remove unused and no more working OpenGl_AVIWriter |
|
Patch is ready for review. |
|
Branch CR27961 reviewed without remarks, ready for testing. |
|
Please check building, regression testing is not needed. |
|
Branch CR27961 has been updated forcibly by mkv. SHA-1: 32d7cb780136cfe25309c862277ab67560ec8f99 |
|
Dear BugMaster, Branch CR27961 was rebased on current master of occt git-repository. SHA-1: 32d7cb780136cfe25309c862277ab67560ec8f99 |
|
Dear BugMaster, Branch CR27961 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 32d7cb780136cfe25309c862277ab67560ec8f99 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1131 |
|
Dear BugMaster, Branch CR27961 is TESTED. |
|
Branch CR27961 has been deleted by kgv. SHA-1: 32d7cb780136cfe25309c862277ab67560ec8f99 |
occt: master 1be41799 2016-10-13 13:28:34 Committer: apn Details Diff |
0027961: Visualization - remove unused and no more working OpenGl_AVIWriter |
Affected Issues 0027961 |
|
mod - src/OpenGl/FILES | Diff File | ||
rm - src/OpenGl/OpenGl_AVIWriter.cxx | Diff File | ||
rm - src/OpenGl/OpenGl_AVIWriter.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Redraw.cxx | Diff File | ||
mod - src/ViewerTest/FILES | Diff File | ||
mod - src/ViewerTest/ViewerTest.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest.hxx | Diff File | ||
rm - src/ViewerTest/ViewerTest_AviCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-10-13 16:27 | kgv | New Issue | |
2016-10-13 16:27 | kgv | Assigned To | => kgv |
2016-10-13 16:31 | git | Note Added: 0058674 | |
2016-10-13 16:31 | kgv | Note Added: 0058675 | |
2016-10-13 16:31 | kgv | Assigned To | kgv => san |
2016-10-13 16:31 | kgv | Status | new => resolved |
2016-10-13 16:31 | kgv | Relationship added | child of 0025382 |
2016-10-13 19:43 |
|
Note Added: 0058691 | |
2016-10-13 19:43 |
|
Assigned To | san => bugmaster |
2016-10-13 19:43 |
|
Status | resolved => reviewed |
2016-10-13 19:45 | kgv | Note Added: 0058692 | |
2016-10-14 13:22 |
|
Assigned To | bugmaster => mkv |
2016-10-14 15:02 | git | Note Added: 0058732 | |
2016-10-17 13:07 |
|
Note Added: 0058784 | |
2016-10-17 13:07 |
|
Note Added: 0058785 | |
2016-10-17 13:07 |
|
Note Added: 0058786 | |
2016-10-17 13:07 |
|
Assigned To | mkv => bugmaster |
2016-10-17 13:07 |
|
Status | reviewed => tested |
2016-10-17 13:07 |
|
Test case number | => Not needed |
2016-10-17 13:08 |
|
Note Edited: 0058785 | |
2016-10-17 13:08 |
|
Note Edited: 0058785 | |
2016-10-21 11:25 | apn | Changeset attached | => occt master 1be41799 |
2016-10-21 11:25 | apn | Assigned To | bugmaster => apn |
2016-10-21 11:25 | apn | Status | tested => verified |
2016-10-21 11:25 | apn | Resolution | open => fixed |
2016-10-28 21:42 | git | Note Added: 0059476 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |