0027961: Visualization - remove unused and no more working OpenGl_AVIWriter